[FIX] edit submenu

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -25,8 +25,7 @@ export const menuitems = [
 		children: [
 			{ title: "VueStoreFront Headless eCommerce", path: "#" },
 			{ title: "Shopify", path: "#" },
-			{ title: "astro.build", path: "#" },
-			{ title: "Hugo", path: "Hugo" },
+			{ title: "Static website", path: "#" },
 		],
 	},
 	{
