[FIX] edit submenu

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -23,7 +23,7 @@ export const menuitems = [
 	{
 		title: "CMS & eCommerce",
 		children: [
-			{ title: "VueStoreFront Headless eCommerce", path: "#" },
+			{ title: "VueStoreFront", path: "#" },
 			{ title: "Shopify", path: "#" },
 			{ title: "Static website", path: "#" },
 		],
