[FIX] edit submenu

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -33,10 +33,11 @@ export const menuitems = [
 		path: "#",
 	},
 	{
-		title: "Integration",
+		title: "Integration & Automation",
 		children:[
-			{ title: "n8n - like Zapier or Make (Integromat)", path: "#" },
+			{ title: "n8n", path: "#" },
 			{ title: "Mautic", path: "#" },
+			{ title: "Frappe", path: "#" },
 	]
 	},
 ];
