feat: added new landing page

--- a/src/components/container.astro
+++ b/src/components/container.astro
@@ -2,6 +2,6 @@
 const { class: className } = Astro.props;
 ---
 
-<div class:list={["max-w-screen-xl px-5  mx-auto dark:bg-stone-900", className]}>
-	<slot />
+<div class:list={["max-w-screen-lg px-5  mx-auto dark:bg-stone-900 space-y-10", className]}>
+  <slot />
 </div>
