--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,50 +5,52 @@ import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import MainPosts from "@components/MainPosts";
+import NewsLetter from "@components/newsLetter.astro";
+import LandingBody from "@components/landingBody.astro";
 
 changeLanguage("en");
 
 const allPosts = async () => {
-    var posts = await getCollection("blog", ({ data }) => {
-        return !data.draft;
-    });
-    // Preprocess the posts to split the slugs and get the languages
-    var processedPosts = posts.map((post) => {
-        const [...slug] = post.slug.split("/");
-        let lang = i18next.language;
-        var firstSlug = post.slug.match(/^([^\/]*)\//);
-        if (firstSlug) {
-            lang = firstSlug[1];
-        }
-        return {
-            ...post,
-            slug: slug.join("/"),
-            lang: lang,
-        };
-    });
-    // Filter posts based on the current language
-    const localizedPosts = processedPosts.filter((post) => post.lang === i18next.language);
-    localizedPosts.sort(function (a, b) {
-        return b.data.publishDate.valueOf() - a.data.publishDate.valueOf();
-    });
-    return localizedPosts;
+  var posts = await getCollection("blog", ({ data }) => {
+    return !data.draft;
+  });
+  // Preprocess the posts to split the slugs and get the languages
+  var processedPosts = posts.map((post) => {
+    const [...slug] = post.slug.split("/");
+    let lang = i18next.language;
+    var firstSlug = post.slug.match(/^([^\/]*)\//);
+    if (firstSlug) {
+      lang = firstSlug[1];
+    }
+    return {
+      ...post,
+      slug: slug.join("/"),
+      lang: lang,
+    };
+  });
+  // Filter posts based on the current language
+  const localizedPosts = processedPosts.filter((post) => post.lang === i18next.language);
+  localizedPosts.sort(function (a, b) {
+    return b.data.publishDate.valueOf() - a.data.publishDate.valueOf();
+  });
+  return localizedPosts;
 };
 const localizedPosts = await allPosts();
 export async function getStaticPaths({ paginate }) {
-    return paginate(localizedPosts, {
-        params: { blog: "blog" || undefined },
-    });
+  return paginate(localizedPosts, {
+    params: { blog: "blog" || undefined },
+  });
 }
-const page = localizedPosts.filter(post=>post.data.category.includes('news'))
+const page = localizedPosts.filter((post) => post.data.category.includes("news"));
 ---
 
-
 <Layout title="Blog" lang="en">
-	<Container>
-		<Sectionhead>
+  <Container>
+    <!-- <Sectionhead>
 			<Fragment slot="title">ERPNext and frappe news</Fragment>
 			<Fragment slot="desc">ERPNext and Frappe news for beginners and advanced users.</Fragment>
-		</Sectionhead>
-		<MainPosts next="next" prev="prev" posts={page} client:load  />
-	</Container>
+		</Sectionhead> -->
+    <!-- <MainPosts next="next" prev="prev" posts={page} client:load  /> -->
+    <LandingBody page={page} />
+  </Container>
 </Layout>
