--- a/src/components/landingBody.astro
+++ b/src/components/landingBody.astro
@@ -44,42 +44,45 @@ const { page } = Astro.props;
   <NewsLetter />
 </section>
 <section id="description" class="dark:text-white">
-  <span>
-    We are certain that <b>software offers the fastest route to learning and implementing best practices</b> in your business. (and your personal life
-    as well)
-  </span>
-  <br />
+  <article class="mx-auto prose prose-lg dark:prose-invert mt-6 dark:text-gray-200 prose-ul:py-7">
+    <p>
+      We are certain that <b>software offers the fastest route to learning and implementing best practices</b> in your business. (and your personal life
+      as well)
+    </p>
+    <br />
 
-  <span>Say goodbye to <b>chaos, knowledge gaps, and resource constraints!</b></span>
-  <br />
-  <span>If you are suffering from <b>stress, overwhelm, and wasted time,</b> it's time to <b>focus on meaningful things!</b></span>
-  <br />
-  <span>
-    System makes your life automated and organized because you do not just get the software, <b>
-      you get tons of proven methods based on many professional experiences
-    </b> without paying hefty paychecks (and taxes!) every month for
-  </span>
-  <ul class="list-disc list-inside">
-    <li>Organization development,</li>
-    <li>Sales,</li>
-    <li>Project management,</li>
-    <li>IT and security,</li>
-    <li>Marketing,</li>
-    <li>Accountant,</li>
-    <li>HR,</li>
-    <li>Customer Success aka Support,</li>
-    <li>Logistics,</li>
-    <li>Marketing, and</li>
-    <li>many other specialists.</li>
-  </ul>
-  <span>
-    There is no perfect solution or software, but <b>our tools have saved millions.</b> We can customize the solution to suit your specific needs, although
-    its effectiveness is often undermined by the inefficiencies of your existing traditional practices.
-  </span>
-  <br />
-  <span>You do not have to reinvent the wheel. We use and support many extraordinary, modern, free, and open-source software. Not to mention AI</span>
-  <br />
-  <span>Efficient digital solutions are no longer exclusive to multinational giants.</span>
+    <p>Say goodbye to <b>chaos, knowledge gaps, and resource constraints!</b></p>
+    <br />
+    <p>If you are suffering from <b>stress, overwhelm, and wasted time,</b> it's time to <b>focus on meaningful things!</b></p>
+    <br />
+    <p>
+      System makes your life automated and organized because you do not just get the software, <b>
+        you get tons of proven methods based on many professional experiences
+      </b> without paying hefty paychecks (and taxes!) every month for
+    </p>
+    <ul class="list-disc list-inside">
+      <li>Organization development,</li>
+      <li>Sales,</li>
+      <li>Project management,</li>
+      <li>IT and security,</li>
+      <li>Marketing,</li>
+      <li>Accountant,</li>
+      <li>HR,</li>
+      <li>Customer Success aka Support,</li>
+      <li>Logistics,</li>
+      <li>Marketing, and</li>
+      <li>many other specialists.</li>
+    </ul>
+
+    <p>
+      There is no perfect solution or software, but <b>our tools have saved millions.</b> We can customize the solution to suit your specific needs, although
+      its effectiveness is often undermined by the inefficiencies of your existing traditional practices.
+    </p>
+    <br />
+    <p>You do not have to reinvent the wheel. We use and support many extraordinary, modern, free, and open-source software. Not to mention AI</p>
+    <br />
+    <p>Efficient digital solutions are no longer exclusive to multinational giants.</p>
+  </article>
 </section>
 <section id="contact-form-2">
   <NewsLetter />
