--- a/src/components/newsLetter.astro
+++ b/src/components/newsLetter.astro
@@ -4,7 +4,7 @@ import Link from "@components/ui/link.astro";
 import { t } from "i18next";
 ---
 
-<div class="mx-auto grid max-w-5xl mt-4 md:mt-12 grid-cols-1 gap-10 px-6 lg:grid-cols-12 lg:gap-8 lg:px-8">
+<div class="mx-auto grid max-w-5xl mt-4 md:mt-12 grid-cols-1 gap-10 px-6 lg:grid-cols-12 lg:gap-8 lg:px-8 border shadow-md p-5 rounded-lg">
   <div class="max-w-xl tracking-tight text-gray-900 dark:text-gray-200 lg:col-span-7">
     <!-- <h2 class="sm:block lg:inline xl:block text-3xl sm:text-4xl">{t("newsletter.title")}</h2> -->
     <h3 class="sm:block lg:inline xl:block text-xl sm:text-2xl">
@@ -26,9 +26,5 @@ import { t } from "i18next";
       />
       <Button>{t("newsletter.button_text")}</Button>
     </div>
-    <p class="mt-4 text-sm leading-6 text-gray-900 dark:text-gray-200">
-      {t("newsletter.privacy")}
-      <Link href="#" style="muted" size="xs">{t("newsletter.privacy_link")}</Link>
-    </p>
   </form>
 </div>
