refactor: ui change

--- a/src/components/landingBody.astro
+++ b/src/components/landingBody.astro
@@ -5,11 +5,11 @@ import NewsLetter from "@components/newsLetter.astro";
 const { page } = Astro.props;
 ---
 
-<div class="mx-auto w-full max-w-xl space-y-4 pt-10">
+<div class="mx-auto w-full max-w-3xl space-y-4 pt-10">
   <div class="flex justify-start">
     <div class="flex w-11/12">
       <img class="w-10 h-10 rounded-full border-gray-300 border mr-2 shadow" src="monolithon-fav.png" alt="monolithon icon" />
-      <div class="relative max-w-xl rounded-xl rounded-tl-none bg-gray-200 px-4 py-2">
+      <div class="relative max-w-2xl rounded-xl rounded-tl-none bg-gray-200 px-4 py-2">
         <span class="text-sm font-medium text-heading">
           I fly often for business. Yesterday, I had three bags to check. I said,<br />"I'd like this bag to go to New Orleans, this one to Seattle,
           and the third to Chicago."<br /> The gate agent rolled her eyes and said:
@@ -34,17 +34,17 @@ const { page } = Astro.props;
   </div>
 </div>
 <!-- next we can do it section -->
-<section id="action" class="mx-auto w-full dark:text-white max-w-2xl space-y-4">
-  <h3 class="sm:block lg:inline xl:block text-xl sm:text-2xl text-center text-gray-600">
-    <b>We can do it</b> - and it’s not a joke, because as <u>independent professionals</u> we specialize in supporting complex business operations, just
-    like yours.
+<section id="action" class="mx-auto w-full dark:text-gray-200 max-w-3xl my-4">
+  <h3 class="sm:block lg:inline xl:block text-lg sm:text-lg text-center w-full wordBreak">
+    <b>We can do it</b> - and it’s not a joke, because as <u>independent professionals</u>
+    we specialize in supporting complex business operations, just like yours.
   </h3>
 </section>
 <section id="contact-form">
   <NewsLetter />
 </section>
 <section id="description" class="dark:text-white">
-  <article class="mx-auto prose prose-lg dark:prose-invert mt-6 dark:text-gray-200 prose-ul:py-2">
+  <article class="mx-auto prose prose-lg dark:prose-invert mt-6 dark:text-gray-200 prose-ul:py-2 max-w-3xl">
     <p>
       We are certain that <b>software offers the fastest route to learning and implementing best practices</b> in your business. (and your personal life
       as well)
