--- a/src/components/landingBody.astro
+++ b/src/components/landingBody.astro
@@ -37,7 +37,7 @@ const { page } = Astro.props;
 <section id="action" class="mx-auto w-full dark:text-gray-200 max-w-3xl my-4">
   <h3 class="sm:block lg:inline xl:block text-lg sm:text-lg text-center w-full wordBreak">
     <b>We can do it</b> - and it’s not a joke, because as <u>independent professionals</u>
-    we specialize in supporting complex business operations, just like yours.
+    we specialize in supporting complex business operations, like yours.
   </h3>
 </section>
 <section id="contact-form">
@@ -46,8 +46,8 @@ const { page } = Astro.props;
 <section id="description" class="dark:text-white">
   <article class="mx-auto prose prose-lg dark:prose-invert mt-6 dark:text-gray-200 prose-ul:py-2 max-w-3xl">
     <p>
-      We are certain that <b>software offers the fastest route to learning and implementing best practices</b> in your business. (and your personal life
-      as well)
+      We are certain that <b>software offers the fastest route to learning and implementing best practices</b> in your business (and your personal life
+      as well).
     </p>
 
     <p>Say goodbye to <b>chaos, knowledge gaps, and resource constraints!</b></p>
@@ -75,12 +75,17 @@ const { page } = Astro.props;
       There is no perfect solution or software, but <b>our tools have saved millions.</b> We can customize the solution to suit your specific needs, although
       its effectiveness is often undermined by the inefficiencies of your existing traditional practices.
     </p>
-    <p>You do not have to reinvent the wheel. We use and support many extraordinary, modern, free, and open-source software. Not to mention AI</p>
+    <p>You do not have to reinvent the wheel. We use and support many extraordinary, modern, <b>free, and open-source software</b>. Not to mention AI.</p>
     <p>Efficient digital solutions are no longer exclusive to multinational giants.</p>
   </article>
 </section>
 <section id="contact-form-2">
   <NewsLetter />
+</section>
+<section id="action" class="mx-auto w-full dark:text-gray-200 max-w-3xl my-4">
+  <h3 class="sm:block lg:inline xl:block text-lg sm:text-lg text-center w-full wordBreak">
+    Our latest blog post on <b>ERPNext, Frappe</b> and more
+  </h3>
 </section>
 <section id="blog">
   <MainPosts next="next" prev="prev" posts={page} client:load />
