feat: updated button hover

--- a/src/components/landingBody.astro
+++ b/src/components/landingBody.astro
@@ -43,8 +43,8 @@ const { page } = Astro.props;
 <section id="contact-form">
   <NewsLetter />
 </section>
-<section id="description" class="dark:text-white">
-  <article class="mx-auto prose prose-lg dark:prose-invert mt-6 dark:text-gray-200 prose-ul:py-2 max-w-3xl">
+<section id="description">
+  <article class="mx-auto prose prose-lg dark:prose-invert mt-6 dark:text-gray-200 prose-ul:py-2 max-w-3xl text-black">
     <p>
       We are certain that <b>software offers the fastest route to learning and implementing best practices</b> in your business (and your personal life
       as well).
@@ -75,7 +75,9 @@ const { page } = Astro.props;
       There is no perfect solution or software, but <b>our tools have saved millions.</b> We can customize the solution to suit your specific needs, although
       its effectiveness is often undermined by the inefficiencies of your existing traditional practices.
     </p>
-    <p>You do not have to reinvent the wheel. We use and support many extraordinary, modern, <b>free, and open-source software</b>. Not to mention AI.</p>
+    <p>
+      You do not have to reinvent the wheel. We use and support many extraordinary, modern, <b>free, and open-source software</b>. Not to mention AI.
+    </p>
     <p>Efficient digital solutions are no longer exclusive to multinational giants.</p>
   </article>
 </section>
