--- a/src/components/newsLetter.astro
+++ b/src/components/newsLetter.astro
@@ -1,30 +1,40 @@
 ---
 import Button from "@components/ui/button.astro";
-import Link from "@components/ui/link.astro";
 import { t } from "i18next";
 ---
 
 <div class="mx-auto grid max-w-5xl mt-4 md:mt-12 grid-cols-1 gap-10 px-6 lg:grid-cols-12 lg:gap-8 lg:px-8 border shadow-md p-5 rounded-lg">
   <div class="max-w-xl tracking-tight text-gray-900 dark:text-gray-200 lg:col-span-7">
-    <!-- <h2 class="sm:block lg:inline xl:block text-3xl sm:text-4xl">{t("newsletter.title")}</h2> -->
     <h3 class="sm:block lg:inline xl:block text-xl sm:text-2xl">
       Get access to the <b>industry's best-kept secrets</b> that affiliated providers never share with you.
     </h3>
-    <!-- <p class="sm:block lg:inline xl:block">{t("newsletter.subtitle")}</p> -->
   </div>
-  <form class="w-full max-w-md lg:col-span-5 lg:pt-2">
+  <form
+    autocomplete="false"
+    role="form"
+    method="post"
+    action="https://asset.monolithon.com/form/submit?formId=3"
+    id="mauticform_emailform"
+    data-mautic-form="emailform"
+    class="w-full max-w-md lg:col-span-5 lg:pt-2"
+    enctype="multipart/form-data">
+    <div class="mauticform-error" id="mauticform_emailform_error"></div>
+    <div class="mauticform-message" id="mauticform_emailform_message"></div>
     <div class="flex gap-x-4">
-      <label for="email-address" class="sr-only">Email address</label>
+      <label id="mauticform_label_emailform_email" for="mauticform_input_emailform_email" class="sr-only mauticform-label">Email Address</label>
       <input
-        id="email-address"
-        name="email"
-        type="email"
-        autocomplete="email"
-        required
+        id="mauticform_input_emailform_email"
+        name="mauticform[email]"
         class="min-w-0 flex-auto rounded-md border-0 px-3.5 py-2 text-gray-900 dark:text-gray-100 dark:bg-stone-950 shadow-sm ring-1 ring-inset ring-gray-300 dark:placeholder:text-gray-100 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+        type="email"
         placeholder={t("newsletter.input_placeholder")}
       />
-      <Button class="hover:!bg-[#2490EF]/80">{t("newsletter.button_text")}</Button>
+      <Button class="hover:!bg-[#2490EF]/80" type="submit" name="mauticform[submit]" id="mauticform_input_emailform_submit" value="">
+        {t("newsletter.button_text")}
+      </Button>
     </div>
+    <input type="hidden" name="mauticform[formId]" id="mauticform_emailform_id" value="3" />
+    <input type="hidden" name="mauticform[return]" id="mauticform_emailform_return" value="" />
+    <input type="hidden" name="mauticform[formName]" id="mauticform_emailform_name" value="emailform" />
   </form>
 </div>
