--- a/src/components/newsLetter.astro
+++ b/src/components/newsLetter.astro
@@ -13,28 +13,31 @@ import { t } from "i18next";
     autocomplete="false"
     role="form"
     method="post"
-    action="https://asset.monolithon.com/form/submit?formId=3"
-    id="mauticform_emailform"
-    data-mautic-form="emailform"
+    action="https://asset.monolithon.com/form/submit?formId=2"
+    id="mauticform_leadmagneten"
+    data-mautic-form="leadmagneten"
     class="w-full max-w-md lg:col-span-5 lg:pt-2"
     enctype="multipart/form-data">
-    <div class="mauticform-error" id="mauticform_emailform_error"></div>
-    <div class="mauticform-message" id="mauticform_emailform_message"></div>
+    <div class="mauticform-error" id="mauticform_leadmagneten_error"></div>
+    <div class="mauticform-message" id="mauticform_leadmagneten_message"></div>
     <div class="flex gap-x-4">
-      <label id="mauticform_label_emailform_email" for="mauticform_input_emailform_email" class="sr-only mauticform-label">Email Address</label>
+      <label id="mauticform_label_leadmagneten_email_address" for="mauticform_input_leadmagneten_email_address" class="sr-only mauticform-label">
+        Email address
+      </label>
       <input
-        id="mauticform_input_emailform_email"
-        name="mauticform[email]"
+        id="mauticform_input_leadmagneten_email_address"
+        name="mauticform[email_address]"
+        placeholder={t("newsletter.placeholder")}
+        value=""
         class="min-w-0 flex-auto rounded-md border-0 px-3.5 py-2 text-gray-900 dark:text-gray-100 dark:bg-stone-950 shadow-sm ring-1 ring-inset ring-gray-300 dark:placeholder:text-gray-100 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
         type="email"
-        placeholder={t("newsletter.input_placeholder")}
       />
-      <Button class="hover:!bg-[#2490EF]/80" type="submit" name="mauticform[submit]" id="mauticform_input_emailform_submit" value="">
+      <Button class="hover:!bg-[#2490EF]/80" type="submit" name="mauticform[submit]" id="mauticform_input_leadmagneten_submit" value="">
         {t("newsletter.button_text")}
       </Button>
     </div>
-    <input type="hidden" name="mauticform[formId]" id="mauticform_emailform_id" value="3" />
-    <input type="hidden" name="mauticform[return]" id="mauticform_emailform_return" value="" />
-    <input type="hidden" name="mauticform[formName]" id="mauticform_emailform_name" value="emailform" />
+    <input type="hidden" name="mauticform[formId]" id="mauticform_leadmagneten_id" value="2" />
+    <input type="hidden" name="mauticform[return]" id="mauticform_leadmagneten_return" value="" />
+    <input type="hidden" name="mauticform[formName]" id="mauticform_leadmagneten_name" value="leadmagneten" />
   </form>
 </div>
