--- a/src/pages/hu/index.astro
+++ b/src/pages/hu/index.astro
@@ -3,53 +3,47 @@ import i18next, { changeLanguage } from "i18next";
 import { getCollection } from "astro:content";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
-import Sectionhead from "@components/sectionhead.astro";
-import MainPosts from "@components/MainPosts";
+import LandingBody from "@components/landingBodyhu.astro";
 
 changeLanguage("hu");
 
 const allPosts = async () => {
-    var posts = await getCollection("blog", ({ data }) => {
-        return !data.draft;
-    });
-    // Preprocess the posts to split the slugs and get the languages
-    var processedPosts = posts.map((post) => {
-        const [...slug] = post.slug.split("/");
-        let lang = i18next.language;
-        var firstSlug = post.slug.match(/^([^\/]*)\//);
-        if (firstSlug) {
-            lang = firstSlug[1];
-        }
-        return {
-            ...post,
-            slug: slug.join("/"),
-            lang: lang,
-        };
-    });
-    // Filter posts based on the current language
-    const localizedPosts = processedPosts.filter((post) => post.lang === i18next.language);
-    localizedPosts.sort(function (a, b) {
-        return b.data.publishDate.valueOf() - a.data.publishDate.valueOf();
-    });
-    return localizedPosts;
+  var posts = await getCollection("blog", ({ data }) => {
+    return !data.draft;
+  });
+  // Preprocess the posts to split the slugs and get the languages
+  var processedPosts = posts.map((post) => {
+    const [...slug] = post.slug.split("/");
+    let lang = i18next.language;
+    var firstSlug = post.slug.match(/^([^\/]*)\//);
+    if (firstSlug) {
+      lang = firstSlug[1];
+    }
+    return {
+      ...post,
+      slug: slug.join("/"),
+      lang: lang,
+    };
+  });
+  // Filter posts based on the current language
+  const localizedPosts = processedPosts.filter((post) => post.lang === i18next.language);
+  localizedPosts.sort(function (a, b) {
+    return b.data.publishDate.valueOf() - a.data.publishDate.valueOf();
+  });
+  return localizedPosts;
 };
 const localizedPosts = await allPosts();
 export async function getStaticPaths({ paginate }) {
-    return paginate(localizedPosts, {
-        params: { blog: "blog" || undefined },
-        pageSize: 4,
-    });
+  return paginate(localizedPosts, {
+    params: { blog: "blog" || undefined },
+    pageSize: 4,
+  });
 }
-const page = localizedPosts.filter(post=>post.data.category.includes('hír'))
+const page = localizedPosts.filter((post) => post.data.category.includes("hír"));
 ---
 
 <Layout title="Blog" lang="en">
-	<Container>
-		<Sectionhead>
-			<Fragment slot="title">ERPNext and frappe hírek</Fragment>
-			<Fragment slot="desc">ERPNext és Frappe hírek mindenkinek.</Fragment>
-		</Sectionhead>
-		<MainPosts next="Következő" prev="Előző" posts={page} client:load  />
-
-	</Container>
+  <Container>
+    <LandingBody page={page} />
+  </Container>
 </Layout>
