--- a/src/components/landingBody.astro
+++ b/src/components/landingBody.astro
@@ -8,7 +8,7 @@ const { page } = Astro.props;
 <div class="mx-auto w-full max-w-3xl space-y-4 pt-10">
   <div class="flex justify-start">
     <div class="flex w-11/12">
-      <img class="w-10 h-10 rounded-full border-gray-300 border mr-2 shadow" src="monolithon-fav.png" alt="monolithon icon" />
+      <img class="w-10 h-10 rounded-full border-gray-300 border mr-2 shadow" src="/monolithon-fav.png" alt="monolithon icon" />
       <div class="relative max-w-2xl rounded-xl rounded-tl-none bg-gray-200 px-4 py-2">
         <span class="text-sm font-medium text-heading">
           I fly often for business. Yesterday, I had three bags to check. I said,<br />"I'd like this bag to go to New Orleans, this one to Seattle,
@@ -26,7 +26,7 @@ const { page } = Astro.props;
   </div>
   <div class="flex justify-start">
     <div class="flex w-11/12">
-      <img class="w-10 h-10 rounded-full border-gray-300 border mr-2 shadow" src="../../public/monolithon-fav.png" alt="monolithon icon" />
+      <img class="w-10 h-10 rounded-full border-gray-300 border mr-2 shadow" src="/monolithon-fav.png" alt="monolithon icon" />
       <div class="relative max-w-xl rounded-xl rounded-tl-none bg-gray-200 px-4 py-2">
         <span class="text-sm font-medium text-heading">I immediately replied:<br /> "Why? You did it last week." 😀</span>
       </div>
