fix: updated hu translation

--- a/src/components/landingBodyhu.astro
+++ b/src/components/landingBodyhu.astro
@@ -20,7 +20,7 @@ const { page } = Astro.props;
   <div class="flex justify-end">
     <div class="flex w-11/12 flex-row-reverse">
       <div class="relative max-w-xl rounded-xl rounded-tr-none bg-[#CCE7FF] px-4 py-2">
-        <span class="text-sm font-medium text-black">We can't do that!</span>
+        <span class="text-sm font-medium text-black">Nem tehetjük meg!</span>
       </div>
     </div>
   </div>
