--- a/src/components/landingBodyhu.astro
+++ b/src/components/landingBodyhu.astro
@@ -11,16 +11,15 @@ const { page } = Astro.props;
       <img class="w-10 h-10 rounded-full border-gray-300 border mr-2 shadow" src="monolithon-fav.png" alt="monolithon icon" />
       <div class="relative max-w-2xl rounded-xl rounded-tl-none bg-gray-200 px-4 py-2">
         <span class="text-sm font-medium text-heading">
-          I fly often for business. Yesterday, I had three bags to check. I said,<br />"I'd like this bag to go to New Orleans, this one to Seattle,
-          and the third to Chicago."<br /> The gate agent rolled her eyes and said:
-        </span>
+          Gyakran utazom üzleti ügyben. Tegnap három bőröndöt kellett feladnom, amikor ezt mondtam:<br />"Szeretném, ha ez a bőrönd New Orleansba, ez Seattle-be, a harmadik pedig Chicagóba menne."<br />A reptéri munkatárs a szemét forgatta és közölte:
+          </span>
       </div>
     </div>
   </div>
   <div class="flex justify-end">
     <div class="flex w-11/12 flex-row-reverse">
       <div class="relative max-w-xl rounded-xl rounded-tr-none bg-[#CCE7FF] px-4 py-2">
-        <span class="text-sm font-medium text-black">Nem tehetjük meg!</span>
+        <span class="text-sm font-medium text-black">Ezt mi nem tudjuk megoldani.</span>
       </div>
     </div>
   </div>
@@ -28,7 +27,7 @@ const { page } = Astro.props;
     <div class="flex w-11/12">
       <img class="w-10 h-10 rounded-full border-gray-300 border mr-2 shadow" src="/monolithon-fav.png" alt="monolithon icon" />
       <div class="relative max-w-xl rounded-xl rounded-tl-none bg-gray-200 px-4 py-2">
-        <span class="text-sm font-medium text-heading">I immediately replied:<br /> "Why? You did it last week." 😀</span>
+        <span class="text-sm font-medium text-heading">Azonnal kontráztam:<br /> "Miért? Múlt héten pont ezt csinálták." 😀</span>
       </div>
     </div>
   </div>
