--- a/src/components/landingBodyhu.astro
+++ b/src/components/landingBodyhu.astro
@@ -35,8 +35,8 @@ const { page } = Astro.props;
 <!-- next we can do it section -->
 <section id="action" class="mx-auto w-full dark:text-gray-200 max-w-3xl my-4">
   <h3 class="sm:block lg:inline xl:block text-lg sm:text-lg text-center w-full wordBreak">
-    <b>We can do it</b> - and it’s not a joke, because as <u>independent professionals</u>
-    we specialize in supporting complex business operations, like yours.
+    <b>Mi ezt is meg tudjuk oldani</b> - vicc nélkül, mert <u>független szakambereinkkel</u>
+    komplex üzleti folyamatok támogatására specializálódtunk, mint a tiéd. 
   </h3>
 </section>
 <section id="contact-form">
@@ -45,12 +45,11 @@ const { page } = Astro.props;
 <section id="description">
   <article class="mx-auto prose prose-lg dark:prose-invert mt-6 dark:text-gray-200 prose-ul:py-2 max-w-3xl text-black">
     <p>
-      We are certain that <b>software offers the fastest route to learning and implementing best practices</b> in your business (and your personal life
-      as well).
+      Tudjuk, hogy <b>a megfelelő szoftver használatával lehet a leggyrosabban a legjobb és legújabb üzleti gyakorlatokat megtanulni és alkalmazni</b> bármilyen szervezetben (és a személyes életben egyaránt).
     </p>
 
-    <p>Say goodbye to <b>chaos, knowledge gaps, and resource constraints!</b></p>
-    <p>If you are suffering from <b>stress, overwhelm, and wasted time,</b> it's time to <b>focus on meaningful things!</b></p>
+    <p>Ints búcsút a <b>káosznak, tudás- és erőforráshiánynak!</b></p>
+    <p>Ha nyomaszt a <b>stressz, állandó leterheltség, és az időrabló feladatok kergetése,</b> itt az idő, hogy <b>a lényeges dolgokra fókuszálj!</b></p>
     <p>
       System makes your life automated and organized because you do not just get the software, <b>
         you get tons of proven methods based on many professional experiences
