--- a/src/components/landingBodyhu.astro
+++ b/src/components/landingBodyhu.astro
@@ -51,22 +51,21 @@ const { page } = Astro.props;
     <p>Ints búcsút a <b>káosznak, tudás- és erőforráshiánynak!</b></p>
     <p>Ha nyomaszt a <b>stressz, állandó leterheltség, és az időrabló feladatok kergetése,</b> itt az idő, hogy <b>a lényeges dolgokra fókuszálj!</b></p>
     <p>
-      System makes your life automated and organized because you do not just get the software, <b>
-        you get tons of proven methods based on many professional experiences
-      </b> without paying hefty paychecks (and taxes!) every month for
+      Egy rendszer automatizálja és megszervezi az életet, de ezzel nem csupán egy szoftvert kapsz, <b>
+        készen kapod a tudást és gyakorlatot amelyek kiemelkedő szakemberek tapasztalatain alapulnak
+      </b> anélkül, hogy nekik vaskos fizetést (és adókat!) kellene fizetned hónapról hónapra: 
     </p>
     <ul class="list-disc list-inside">
-      <li>Organization development,</li>
-      <li>Sales,</li>
-      <li>Project management,</li>
-      <li>IT and security,</li>
-      <li>Marketing,</li>
-      <li>Accountant,</li>
-      <li>HR,</li>
-      <li>Customer Success aka Support,</li>
-      <li>Logistics,</li>
-      <li>Marketing, and</li>
-      <li>many other specialists.</li>
+      <li>Szervezetfejelsztő,</li>
+      <li>Értékesítő,</li>
+      <li>Projektmenedzser,</li>
+      <li>IT és biztonsági szakember,</li>
+      <li>Könyvelő és adótanácsadó,</li>
+      <li>HR szakember,</li>
+      <li>Ügyfél elégedettségi és támogatási szakember,</li>
+      <li>Logisztikai szakember,</li>
+      <li>Marketingszakember, és</li>
+      <li>sok egyéb specialista.</li>
     </ul>
 
     <p>
