--- a/src/components/landingBody.astro
+++ b/src/components/landingBody.astro
@@ -71,6 +71,10 @@ const { page } = Astro.props;
     </ul>
 
     <p>
+      Because our software solutions cover more than just those professions or business areas.
+    </p>
+
+    <p>
       There is no perfect solution or software, but <b>our tools have saved millions.</b> We can customize the solution to suit your specific needs, although
       its effectiveness is often undermined by the inefficiencies of your existing traditional practices.
     </p>
