--- a/src/components/landingBodyhu.astro
+++ b/src/components/landingBodyhu.astro
@@ -69,6 +69,10 @@ const { page } = Astro.props;
     </ul>
 
     <p>
+      Mert szoftvermegoldásaink még több területet fednek le, mint ezek a szakmák vagy üzleti területek.
+    </p>
+
+    <p>
       There is no perfect solution or software, but <b>our tools have saved millions.</b> We can customize the solution to suit your specific needs, although
       its effectiveness is often undermined by the inefficiencies of your existing traditional practices.
     </p>
