--- a/src/components/landingBodyhu.astro
+++ b/src/components/landingBodyhu.astro
@@ -73,8 +73,8 @@ const { page } = Astro.props;
     </p>
 
     <p>
-      There is no perfect solution or software, but <b>our tools have saved millions.</b> We can customize the solution to suit your specific needs, although
-      its effectiveness is often undermined by the inefficiencies of your existing traditional practices.
+      Nincs tökéletes (szoftver) megoldás, de <b>eszközeinkkel milliókat spórolnak a felhasználók.</b> Extra fejlesztéssel még testreszabottabb megoldásokat is szállítunk,
+      de ez olyan esetben nem célszerű, ha a szervezetlenség a meglévő, berögzült vagy adhoc rossz gyakorlatból származik. 
     </p>
     <p>
       You do not have to reinvent the wheel. We use and support many extraordinary, modern, <b>free, and open-source software</b>. Not to mention AI.
