--- a/src/components/landingBodyhu.astro
+++ b/src/components/landingBodyhu.astro
@@ -45,7 +45,7 @@ const { page } = Astro.props;
 <section id="description">
   <article class="mx-auto prose prose-lg dark:prose-invert mt-6 dark:text-gray-200 prose-ul:py-2 max-w-3xl text-black">
     <p>
-      Tudjuk, hogy <b>a megfelelő szoftver használatával lehet a leggyrosabban a legjobb és legújabb üzleti gyakorlatokat megtanulni és alkalmazni</b> bármilyen szervezetben (és a személyes életben egyaránt).
+      Tudjuk, hogy a megfelelő szoftver használatával lehet a leggyrosabban a legjobb és legújabb <b>üzleti gyakorlatokat megtanulni és alkalmazni</b> bármilyen szervezetben (és a személyes életben egyaránt).
     </p>
 
     <p>Ints búcsút a <b>káosznak, tudás- és erőforráshiánynak!</b></p>
@@ -73,13 +73,13 @@ const { page } = Astro.props;
     </p>
 
     <p>
-      Nincs tökéletes (szoftver) megoldás, de <b>eszközeinkkel milliókat spórolnak a felhasználók.</b> Extra fejlesztéssel még testreszabottabb megoldásokat is szállítunk,
+      Nincs tökéletes (szoftver) megoldás, de <b>eszközeinkkel milliókat spórolnak a felhasználók.</b> Extra fejlesztéssel még testreszabottabb megoldásokat szállítunk,
       de ez olyan esetben nem célszerű, ha a szervezetlenség a meglévő, berögzült vagy adhoc rossz gyakorlatból származik. 
     </p>
     <p>
-      You do not have to reinvent the wheel. We use and support many extraordinary, modern, <b>free, and open-source software</b>. Not to mention AI.
+      Nem kell újra feltalálni a kereket. Mi nem csak terjesztjük és támogatjuk, hanem használjuk is ezeket a kiemelkedő, modern, <b>ingyenes és nyílt forráskódú szoftvereket</b>. Az AI-t nem is említve.
     </p>
-    <p>Efficient digital solutions are no longer exclusive to multinational giants.</p>
+    <p>A hatékony digitális megoldás (CRM, ERP, stb...) már nem csak a nemzetközi mamutok számára elérhető, sőt.</p>
   </article>
 </section>
 <section id="contact-form-2">
@@ -87,7 +87,7 @@ const { page } = Astro.props;
 </section>
 <section id="action" class="mx-auto w-full dark:text-gray-200 max-w-3xl my-4">
   <h3 class="sm:block lg:inline xl:block text-lg sm:text-lg text-center w-full wordBreak">
-    Our latest blog post on <b>ERPNext, Frappe</b> and more
+    Legfrissebb írásaink <b>ERPNext, Frappe</b> és egyéb témákban
   </h3>
 </section>
 <section id="blog">
