feat: added hu newletter component

--- a/src/components/landingBodyhu.astro
+++ b/src/components/landingBodyhu.astro
@@ -1,7 +1,7 @@
 ---
 import Sectionhead from "@components/sectionhead.astro";
 import MainPosts from "@components/MainPosts";
-import NewsLetter from "@components/newsLetter.astro";
+import NewsLetter from "@components/newsLetterhu.astro";
 const { page } = Astro.props;
 ---
 
@@ -11,8 +11,9 @@ const { page } = Astro.props;
       <img class="w-10 h-10 rounded-full border-gray-300 border mr-2 shadow" src="monolithon-fav.png" alt="monolithon icon" />
       <div class="relative max-w-2xl rounded-xl rounded-tl-none bg-gray-200 px-4 py-2">
         <span class="text-sm font-medium text-heading">
-          Gyakran utazom üzleti ügyben. Tegnap három bőröndöt kellett feladnom, amikor ezt mondtam:<br />"Szeretném, ha ez a bőrönd New Orleansba, ez Seattle-be, a harmadik pedig Chicagóba menne."<br />A reptéri munkatárs a szemét forgatta és közölte:
-          </span>
+          Gyakran utazom üzleti ügyben. Tegnap három bőröndöt kellett feladnom, amikor ezt mondtam:<br />"Szeretném, ha ez a bőrönd New Orleansba, ez
+          Seattle-be, a harmadik pedig Chicagóba menne."<br />A reptéri munkatárs a szemét forgatta és közölte:
+        </span>
       </div>
     </div>
   </div>
@@ -36,7 +37,7 @@ const { page } = Astro.props;
 <section id="action" class="mx-auto w-full dark:text-gray-200 max-w-3xl my-4">
   <h3 class="sm:block lg:inline xl:block text-lg sm:text-lg text-center w-full wordBreak">
     <b>Mi ezt is meg tudjuk oldani</b> - vicc nélkül, mert <u>független szakambereinkkel</u>
-    komplex üzleti folyamatok támogatására specializálódtunk, mint a tiéd. 
+    komplex üzleti folyamatok támogatására specializálódtunk, mint a tiéd.
   </h3>
 </section>
 <section id="contact-form">
@@ -45,15 +46,18 @@ const { page } = Astro.props;
 <section id="description">
   <article class="mx-auto prose prose-lg dark:prose-invert mt-6 dark:text-gray-200 prose-ul:py-2 max-w-3xl text-black">
     <p>
-      Tudjuk, hogy a megfelelő szoftver használatával lehet a leggyrosabban a legjobb és legújabb <b>üzleti gyakorlatokat megtanulni és alkalmazni</b> bármilyen szervezetben (és a személyes életben egyaránt).
+      Tudjuk, hogy a megfelelő szoftver használatával lehet a leggyrosabban a legjobb és legújabb <b>üzleti gyakorlatokat megtanulni és alkalmazni</b>
+      bármilyen szervezetben (és a személyes életben egyaránt).
     </p>
 
     <p>Ints búcsút a <b>káosznak, tudás- és erőforráshiánynak!</b></p>
-    <p>Ha nyomaszt a <b>stressz, állandó leterheltség, és az időrabló feladatok kergetése,</b> itt az idő, hogy <b>a lényeges dolgokra fókuszálj!</b></p>
+    <p>
+      Ha nyomaszt a <b>stressz, állandó leterheltség, és az időrabló feladatok kergetése,</b> itt az idő, hogy <b>a lényeges dolgokra fókuszálj!</b>
+    </p>
     <p>
       Egy rendszer automatizálja és megszervezi az életet, de ezzel nem csupán egy szoftvert kapsz, <b>
         készen kapod a tudást és gyakorlatot amelyek kiemelkedő szakemberek tapasztalatain alapulnak
-      </b> anélkül, hogy nekik vaskos fizetést (és adókat!) kellene fizetned hónapról hónapra: 
+      </b> anélkül, hogy nekik vaskos fizetést (és adókat!) kellene fizetned hónapról hónapra:
     </p>
     <ul class="list-disc list-inside">
       <li>Szervezetfejelsztő,</li>
@@ -68,16 +72,16 @@ const { page } = Astro.props;
       <li>sok egyéb specialista.</li>
     </ul>
 
-    <p>
-      Mert szoftvermegoldásaink még több területet fednek le, mint ezek a szakmák vagy üzleti területek.
-    </p>
+    <p>Mert szoftvermegoldásaink még több területet fednek le, mint ezek a szakmák vagy üzleti területek.</p>
 
     <p>
-      Nincs tökéletes (szoftver) megoldás, de <b>eszközeinkkel milliókat spórolnak a felhasználók.</b> Extra fejlesztéssel még testreszabottabb megoldásokat szállítunk,
-      de ez olyan esetben nem célszerű, ha a szervezetlenség a meglévő, berögzült vagy adhoc rossz gyakorlatból származik. 
+      Nincs tökéletes (szoftver) megoldás, de <b>eszközeinkkel milliókat spórolnak a felhasználók.</b> Extra fejlesztéssel még testreszabottabb megoldásokat
+      szállítunk, de ez olyan esetben nem célszerű, ha a szervezetlenség a meglévő, berögzült vagy adhoc rossz gyakorlatból származik.
     </p>
     <p>
-      Nem kell újra feltalálni a kereket. Mi nem csak terjesztjük és támogatjuk, hanem használjuk is ezeket a kiemelkedő, modern, <b>ingyenes és nyílt forráskódú szoftvereket</b>. Az AI-t nem is említve.
+      Nem kell újra feltalálni a kereket. Mi nem csak terjesztjük és támogatjuk, hanem használjuk is ezeket a kiemelkedő, modern, <b>
+        ingyenes és nyílt forráskódú szoftvereket
+      </b>. Az AI-t nem is említve.
     </p>
     <p>A hatékony digitális megoldás (CRM, ERP, stb...) már nem csak a nemzetközi mamutok számára elérhető, sőt.</p>
   </article>
