--- a/src/components/newsLetterhu.astro
+++ b/src/components/newsLetterhu.astro
@@ -6,7 +6,7 @@ import { t } from "i18next";
 <div class="mx-auto grid max-w-5xl mt-4 md:mt-12 grid-cols-1 gap-10 px-6 lg:grid-cols-12 lg:gap-8 lg:px-8 border shadow-md p-5 rounded-lg">
   <div class="max-w-xl tracking-tight text-gray-900 dark:text-gray-200 lg:col-span-7">
     <h3 class="sm:block lg:inline xl:block text-xl sm:text-2xl">
-      Get access to the <b>industry's best-kept secrets</b> that affiliated providers never share with you.
+      Tudd meg <b>az iparág legféltetebb titkait</b> amit a társult partnerek soha nem osztanának meg veled. 
     </h3>
   </div>
   <form
