feat: added translation for next and prev button

--- a/src/components/landingBodyhu.astro
+++ b/src/components/landingBodyhu.astro
@@ -95,5 +95,5 @@ const { page } = Astro.props;
   </h3>
 </section>
 <section id="blog">
-  <MainPosts next="next" prev="prev" posts={page} client:load />
+  <MainPosts next="Előző" prev="Következő" posts={page} client:load />
 </section>
