fix: [UPD] button translation

--- a/src/components/landingBody.astro
+++ b/src/components/landingBody.astro
@@ -70,9 +70,7 @@ const { page } = Astro.props;
       <li>many other specialists.</li>
     </ul>
 
-    <p>
-      Because our software solutions cover more than just those professions or business areas.
-    </p>
+    <p>Because our software solutions cover more than just those professions or business areas.</p>
 
     <p>
       There is no perfect solution or software, but <b>our tools have saved millions.</b> We can customize the solution to suit your specific needs, although
