--- a/src/pages/hu/index.astro
+++ b/src/pages/hu/index.astro
@@ -42,7 +42,7 @@ export async function getStaticPaths({ paginate }) {
 const page = localizedPosts.filter((post) => post.data.category.includes("hír"));
 ---
 
-<Layout title="Blog" lang="en">
+<Layout title="ERPNext, Frappe, Odoo plusz..." lang="en">
   <Container>
     <LandingBody page={page} />
   </Container>
