--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ export async function getStaticPaths({ paginate }) {
 const page = localizedPosts.filter((post) => post.data.category.includes("news"));
 ---
 
-<Layout title="Blog" lang="en">
+<Layout title="ERPNext, Frappe, Odoo and more" lang="en">
   <Container>
     <LandingBody page={page} />
   </Container>
