fix: monolithon icon in hu

--- a/src/components/landingBodyhu.astro
+++ b/src/components/landingBodyhu.astro
@@ -1,5 +1,4 @@
 ---
-import Sectionhead from "@components/sectionhead.astro";
 import MainPosts from "@components/MainPosts";
 import NewsLetter from "@components/newsLetterhu.astro";
 const { page } = Astro.props;
@@ -8,7 +7,7 @@ const { page } = Astro.props;
 <div class="mx-auto w-full max-w-3xl space-y-4 pt-10">
   <div class="flex justify-start">
     <div class="flex w-11/12">
-      <img class="w-10 h-10 rounded-full border-gray-300 border mr-2 shadow" src="monolithon-fav.png" alt="monolithon icon" />
+      <img class="w-10 h-10 rounded-full border-gray-300 border mr-2 shadow" src="/monolithon-fav.png" alt="monolithon icon" />
       <div class="relative max-w-2xl rounded-xl rounded-tl-none bg-gray-200 px-4 py-2">
         <span class="text-sm font-medium text-heading">
           Gyakran utazom üzleti ügyben. Tegnap három bőröndöt kellett feladnom, amikor ezt mondtam:<br />"Szeretném, ha ez a bőrönd New Orleansba, ez
