--- a/src/components/newsLetter.astro
+++ b/src/components/newsLetter.astro
@@ -27,6 +27,7 @@ import { t } from "i18next";
       <input
         id="mauticform_input_leadmagneten_email_address"
         name="mauticform[email_address]"
+        required
         placeholder={t("newsletter.input_placeholder")}
         value=""
         class="min-w-0 flex-auto rounded-md border-0 px-3.5 py-2 text-gray-900 dark:text-gray-100 dark:bg-stone-950 shadow-sm ring-1 ring-inset ring-gray-300 dark:placeholder:text-gray-100 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
