--- a/src/components/newsLetterhu.astro
+++ b/src/components/newsLetterhu.astro
@@ -6,7 +6,7 @@ import { t } from "i18next";
 <div class="mx-auto grid max-w-5xl mt-4 md:mt-12 grid-cols-1 gap-10 px-6 lg:grid-cols-12 lg:gap-8 lg:px-8 border shadow-md p-5 rounded-lg">
   <div class="max-w-xl tracking-tight text-gray-900 dark:text-gray-200 lg:col-span-7">
     <h3 class="sm:block lg:inline xl:block text-xl sm:text-2xl">
-      Tudd meg <b>az iparág legféltetebb titkait,</b> amit a társult partnerek soha nem osztanának meg veled. 
+      Tudd meg <b>az iparág legféltetebb titkait,</b> amit a társult partnerek soha nem osztanának meg veled.
     </h3>
   </div>
   <form
@@ -27,6 +27,7 @@ import { t } from "i18next";
       <input
         id="mauticform_input_leadmagnethu_email_address"
         name="mauticform[email_address]"
+        required
         placeholder={t("newsletter.input_placeholder")}
         value=""
         class="min-w-0 flex-auto rounded-md border-0 px-3.5 py-2 text-gray-900 dark:text-gray-100 dark:bg-stone-950 shadow-sm ring-1 ring-inset ring-gray-300 dark:placeholder:text-gray-100 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
