--- a/src/components/languageselector.astro
+++ b/src/components/languageselector.astro
@@ -177,12 +177,13 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
       }
 
       if (window.location.pathname.startsWith("/hu/tag")) {
-        const param = window.location.pathname.split("category")[1].replaceAll("/", "");
+        const param = window.location.pathname.split("tag")[1].replaceAll("/", "");
         const prams = tag[decodeURIComponent(param)];
         const url = window.location.pathname.replace(param, prams).replace("/hu", "");
         englishSelector.value = url;
         hungarySelector.value = decodeURIComponent(window.location.pathname);
       }
+
       const param = window.location.pathname.split("/hu")[1].replaceAll("/", "");
       const prams = blog[decodeURIComponent(param.replaceAll("/", ""))];
       if (!prams) {
@@ -209,12 +210,13 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
       }
 
       if (window.location.pathname.startsWith("/tag")) {
-        const param = window.location.pathname.split("category")[1].replaceAll("/", "");
+        const param = window.location.pathname.split("tag")[1].replaceAll("/", "");
         const prams = tag[decodeURIComponent(param)];
         const url = window.location.pathname.replace(param, prams);
         englishSelector.value = window.location.pathname;
         hungarySelector.value = `/hu${url}`;
       }
+
       const param = window.location.pathname.split("/")[1];
       const prams = blog[param.replace("/", "")];
       if (!prams) {
