[NEW] vuestorefront pages

--- a/src/pages/odoo-erp.astro
+++ b/src/pages/odoo-erp.astro
@@ -2,9 +2,8 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-import LetsTalk from "@components/LetsTalk.astro";
 import NewsLetter from "@components/newsLetter.astro";
-changeLanguage("hu");
+changeLanguage("en");
 ---
 
 <Layout lang="en" title="Odoo more than an ERP">
