[FIX] vuestorefront pages

--- a/src/pages/vuestorefront-headless-ecommerce.astro
+++ b/src/pages/vuestorefront-headless-ecommerce.astro
@@ -52,7 +52,8 @@ changeLanguage("en");
 					<p class="list-disc text-[17px] leading-7 space-y-5">
 						Currently, we recommend Odoo as the backend system for VueStoreFront, but we are expected to have a solution for ERPNext as well. It is foreseeable that for those who have outgrown Odoo's e-commerce solution or have not started with it due to its limited functionality, or those who need to synchronize with other existing e-commerce systems, this is the simplest and fastest way to streamline processes and enable unlimited expansion. Conversely, if someone wishes to replace only the user interface of their current solution, since, for example, Shopify offers its own headless solution or the VuestoreFront is also compatible with Shopify, acceleration is also available, perhaps the easiest way since business processes remain unchanged. In a second step, the previous backend system can be
 
- replaced with an open-source solution, as it is not worth maintaining another online store alongside one, especially when high-level functionality is missing from the other ERP systems such as warehousing, accounting, project management, customer service, etc., which will be needed sooner or later.
+ replaced with an open-source solution, as it is not worth maintaining another online store alongside one, especially when high-level functionality is missing from the other ERP systems such as warehousing, accounting, project management, customer service, etc., which will be needed sooner or later.<br><br>
+ And yes, VueStoreFront Headless solution is a free an open-source software. 
 					</p>
 				</section>
 				<section id="contact-form-2">
