--- a/src/pages/hu/odoo-magyarul.astro
+++ b/src/pages/hu/odoo-magyarul.astro
@@ -13,7 +13,7 @@ changeLanguage("hu");
 				<div class="flex flex-col h-full justify-center">
 					<h1 class="text-[60px] leading-none font-semibold">Odoo magyarul.</h1>
 					<h2 class="text-xl text-[#192734] dark:text-white my-4">Üzleti folyamatok egyszerűen.</h2>
-					<a href="/contact">
+					<a href="/hu/kapcsolat">
 						<button class="md:px-3 md:py-2 leading-6 bg-[#2490EF] rounded-lg text-white w-32 h-12 text-xl">Beszéljünk!</button>
 					</a>
 				</div>
