[FIX] update menu items

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -10,7 +10,7 @@ const logo = "logo.title";
 
 export const menuitems = [
 	{
-		title: "ERP",
+		title: "ERPs",
 		children: [
 			{ title: "ERPNext", path: "path_header.erpnext" },
 			{ title: "header.implementation", path: "path_header.implementation" },
@@ -24,8 +24,6 @@ export const menuitems = [
 		title: "CMS & eCommerce",
 		children: [
 			{ title: "VueStoreFront", path: "#" },
-			{ title: "Shopify", path: "#" },
-			{ title: "Static website", path: "#" },
 		],
 	},
 	{
@@ -36,8 +34,6 @@ export const menuitems = [
 		title: "Integration & Automation",
 		children:[
 			{ title: "n8n", path: "#" },
-			{ title: "Mautic", path: "#" },
-			{ title: "Frappe", path: "#" },
 	]
 	},
 ];
