--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -10,7 +10,7 @@ const logo = "logo.title";
 
 export const menuitems = [
 	{
-		title: "ERPs",
+		title: "ERP",
 		children: [
 			{ title: "ERPNext", path: "path_header.erpnext" },
 			{ title: "header.implementation", path: "path_header.implementation" },
