--- a/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
+++ b/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
@@ -21,12 +21,7 @@ const pricingData = [
     },
     {
         name: "Standard",
-        price: {
-            monthly: "€499",
-            annual: "$16",
-            discount: "10%",
-            original: "$24",
-        },
+		price: "€599",
         popular: true,
         features: [
             "Minden a Simple csomagból, plusz:",
@@ -82,7 +77,7 @@ const pricingData = [
 				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Nem csak költséget csökkent, plusz bevételt is termel</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5]">
-						z
+						z	
 					</p>
 				</section>
 			</div>
