--- a/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
+++ b/src/pages/hu/ugyfelhivo-sorszamoszto-kiosk-ugyfeliranyito-rendszer.astro
@@ -13,7 +13,7 @@ const pricingData = [
         name: "Simple",
         price: "€299",
         popular: false,
-        features: ["Havidíj", "Korlátlan felhasználó", "Korlátlan vendég", "Korlátlan kiosk", "Korlátlan kijelző", "Korlátlan forgalom*"],
+        features: ["Havidíj/lokáció", "Korlátlan felhasználó", "Korlátlan vendég", "Korlátlan kiosk", "Korlátlan kijelző", "Korlátlan forgalom*"],
         button: {
             text: "Beszéljünk!",
             link: "/hu/kapcsolat",
@@ -65,7 +65,7 @@ const pricingData = [
 				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
 					<h2 class="font-bold text-3xl mb-10">Nincs többé felesleges sorbanállás</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5]">
-							x
+							
 				</section>
 
 				<section class="py-8 px-4 md:w-[45vw] text-[#192734] dark:text-white">
