fix: updated consent css being used as path

--- a/src/components/cookie.astro
+++ b/src/components/cookie.astro
@@ -1,5 +1,5 @@
 <body class="dark:bg-stone-900">
-  <link rel="stylesheet" href="./cookieconsent.css" />
+  <link rel="stylesheet" href="/cookieconsent.css" />
   <script defer src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.x.x/dist/cookieconsent.js"></script>
   <script>
     window.addEventListener("load", () => {
